--- a/src/app/detail-produit/detail-produit.component.html
+++ b/src/app/detail-produit/detail-produit.component.html
@@ -1,1 +1,35 @@
-<p>detail-produit works!</p>
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+  <meta charset="UTF-8">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+</head>
+<body>
+
+  <div class="section">
+    <div class="card">
+    <div class="card_image">
+      <img src="{{produit?.image}}" alt="{{produit?.nom}}">
+    </div>
+    <div class="card_content">
+      <h2 class="card_title">{{ produit?.nom | uppercase}}</h2>
+      <div class="card_text">
+        <ul>
+        <li>Prix: {{ produit?.prix | currency:'EUR':'symbol':'1.2-2'}}</li>
+        <li>Quantité : {{ produit?.quantite }}</li>
+
+        </ul>
+          <h3>Description:</h3>
+          <p>{{ produit?.description }}</p>
+
+      </div>
+    </div>
+  </div>
+  </div>
+
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+</body>
+</html>
