mis à jour de la position de la devise

--- a/src/app/produit/produit.component.html
+++ b/src/app/produit/produit.component.html
@@ -15,7 +15,7 @@
           <img src="{{ produit.image }}" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">{{ produit.nom | uppercase}}</h5>
-            <p class="card-text"> {{ produit.prix | currency:'EUR':'symbol':'1.2-2'}}</p>
+            <p class="card-text"> {{ produit.prix | currency:'EUR':'symbol':'1.2-2':'Fr'}}</p>
           </div>
         </div>
       </div>
