mis à jour de la position de la devise

--- a/src/app/detail-produit/detail-produit.component.html
+++ b/src/app/detail-produit/detail-produit.component.html
@@ -17,7 +17,7 @@
       <h2 class="card_title">{{ produit?.nom | uppercase}}</h2>
       <div class="card_text">
         <ul>
-        <li>Prix: {{ produit?.prix | currency:'EUR':'symbol':'1.2-2'}}</li>
+        <li>Prix: {{ produit?.prix | currency:'EUR':'symbol':'1.2-2':'Fr'}}</li>
         <li>Quantité : {{ produit?.quantite }}</li>
 
         </ul>
